Patch text alignment issue due to user-display directive having text or not. Fix text for past event participants.

--- a/app/events/event-details/event-details.component.css
+++ b/app/events/event-details/event-details.component.css
@@ -110,5 +110,9 @@
 .going-label {
   color: #000;
   margin-left: 5;
+}
+
+/* TODO: fix this when there is time */
+.to-do-fix-alignment {
   margin-top: 0;
 }
